# zkaleido

./: Cargo.toml  Makefile
.github/actions/toolchains/: action.yml
.github/workflows/: cron-nightly-rust.yml  cron-zizmor.yml  lint-actions.yml  lint.yml  prover.yml  security.yml.disabled  test.yml  unit.yml
adapters/native/src/: host.rs  input.rs  proof.rs
adapters/risc0/groth16-verifier/: Cargo.toml
adapters/risc0/groth16-verifier/src/: errors.rs  lib.rs  sha256.rs  verifier.rs
adapters/risc0/guest/: Cargo.toml
adapters/risc0/host/: Cargo.toml
adapters/risc0/host/src/: perf.rs  proof.rs  prover.rs  verifier.rs
adapters/sp1/groth16-verifier/: Cargo.toml
adapters/sp1/groth16-verifier/src/: error.rs  lib.rs  utils.rs  verification.rs  verifier.rs
adapters/sp1/groth16-verifier/src/types/: constant.rs  g1.rs  g2.rs  mod.rs  proof.rs  utils.rs  vk.rs
adapters/sp1/guest/: Cargo.toml
adapters/sp1/host/: Cargo.toml
adapters/sp1/host/src/: perf.rs  proof.rs  prover.rs  verifier.rs
artifacts/risc0/: Cargo.toml
artifacts/risc0/templates/: Cargo.toml.tera
artifacts/sp1/: Cargo.toml
artifacts/sp1/src/: lib.rs
artifacts/sp1/templates/: Cargo.toml.tera
examples/fibonacci-composition/src/: lib.rs  program.rs
examples/fibonacci/src/: lib.rs  program.rs
examples/groth16-verify-risc0/: Cargo.toml
examples/groth16-verify-risc0/src/: input.rs  lib.rs  program.rs
examples/groth16-verify-sp1/: Cargo.toml
examples/groth16-verify-sp1/src/: input.rs  lib.rs  program.rs
examples/schnorr-sig-verify/src/: input.rs  lib.rs  logic.rs  program.rs
examples/sha2-chain/src/: lib.rs  program.rs
runner/: Cargo.toml
runner/src/programs/: fibonacci.rs  fibonacci_composition.rs  groth16_verify_risc0.rs  groth16_verify_sp1.rs  mod.rs  schnorr.rs  sha2.rs
zkaleido/src/: errors.rs  host.rs  input.rs  lib.rs  program.rs  proof.rs  prover.rs  verifier.rs
