[workspace]
members = [
  "adapters/native",

  "adapters/risc0/host",
  "adapters/risc0/guest",
  "adapters/risc0/groth16-verifier",

  "adapters/sp1/host",
  "adapters/sp1/guest",
  "adapters/sp1/groth16-verifier",

  "zkaleido",

  # binaries
  "runner",

  # examples
  "examples/fibonacci-composition",
  "examples/fibonacci",
  "examples/groth16-verify-sp1",
  "examples/groth16-verify-risc0",
  "examples/sha2-chain",
  "examples/schnorr-sig-verify",
]

resolver = "2"

[workspace.dependencies]
zkaleido = { path = "zkaleido" }
zkaleido-native-adapter = { path = "adapters/native" }
zkaleido-sp1-groth16-verifier = { path = "adapters/sp1/groth16-verifier" }
zkaleido-risc0-groth16-verifier = { path = "adapters/risc0/groth16-verifier" }

fibonacci = { path = "examples/fibonacci" }
fibonacci-composition = { path = "examples/fibonacci-composition" }
sha2-chain = { path = "examples/sha2-chain" }
schnorr-sig-verify = { path = "examples/schnorr-sig-verify" }
groth16-verify-sp1 = { path = "examples/groth16-verify-sp1" }
groth16-verify-risc0 = { path = "examples/groth16-verify-risc0" }

arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.86"
bincode = "1.3"
borsh = { version = "1.5.0", features = ["derive"] }
cfg-if = "1.0.0"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
