[package]
edition = "2021"
name = "zkaleido-runner"
version = "0.1.0"

[dependencies]
zkaleido.workspace = true

# examples
fibonacci.workspace = true
fibonacci-composition.workspace = true
sha2-chain.workspace = true
schnorr-sig-verify.workspace = true
groth16-verify-sp1.workspace = true
groth16-verify-risc0.workspace = true

# sp1
zkaleido-sp1-host = { path = "../adapters/sp1/host", optional = true }
zkaleido-sp1-artifacts = { path = "../artifacts/sp1", optional = true }

# risc0
zkaleido-risc0-host = { path = "../adapters/risc0/host", optional = true }
zkaleido-risc0-artifacts = { path = "../artifacts/risc0", optional = true }

anyhow = "1.0.83"
clap = { version = "4.5.9", features = ["derive"] }
bincode = "1.3.3"
num-format = "0.4.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sp1-sdk = "5.0.0"
time = "0.3.26"
tokio = { version = "1.39.0", features = ["full"] }

[features]
default = ["sp1", "risc0"]
sp1 = ["zkaleido-sp1-artifacts", "zkaleido-sp1-host/perf"]
risc0 = ["zkaleido-risc0-artifacts", "zkaleido-risc0-host/perf"]
