[package]
edition = "2021"
name = "zkaleido-risc0-artifacts"
version = "0.1.0"

[dependencies]

[build-dependencies]
risc0-build = { version = "2.1.1", features = ["unstable"] }
tera = "1.17.0"

[package.metadata.risc0]
methods = [
  "fibonacci",
  "sha2-chain",
  "schnorr-sig-verify",
  "fibonacci-composition",
  "groth16-verify-risc0",
  "groth16-verify-sp1",
]
