[package]
name = "groth16-verify-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
zkaleido-risc0-groth16-verifier = { path = "../../adapters/risc0/groth16-verifier" }
zkaleido = { path = "../../zkaleido" }
zkaleido-native-adapter = { path = "../../adapters/native" }
hex.workspace = true
risc0-groth16 = "2.0.1"
risc0-zkp = "2.0.1"
