[package]
edition = "2021"
name = "zkaleido-sp1-groth16-verifier"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
blake3 = { version = "1.6.1", default-features = false }
bn = { version = "0.6.0", package = "substrate-bn" }
borsh.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zkaleido.workspace = true

[dev-dependencies]
sp1-verifier = "5.0.0"
hex.workspace = true
serde_json = "1.0.140"
bincode.workspace = true
rand = "0.8.3"
