[package]
edition = "2021"
name = "zkaleido-sp1-guest-env"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
sp1-zkvm = "5.0.0"
zkaleido.workspace = true

bincode.workspace = true
cfg-if.workspace = true
serde.workspace = true
sha2 = { workspace = true, optional = true }

[features]
blake3 = ["sp1-zkvm/blake3"]
zkvm-verify = ["sp1-zkvm/verify", "sha2"]
mock-verify = []
