[package]
edition = "2021"
name = "zkaleido-sp1-host"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
sp1-sdk = "5.0.0"
sp1-prover = { version = "5.0.0", optional = true }
sp1-stark = { version = "5.0.0", optional = true }
zkaleido.workspace = true

async-trait = { workspace = true, optional = true }
bincode.workspace = true
borsh.workspace = true
hex = { workspace = true, optional = true }
serde.workspace = true

[features]
remote-prover = ["async-trait", "hex"]
perf = ["sp1-sdk/profiling", "sp1-prover", "sp1-stark"]
